[gd_scene load_steps=6 format=3 uid="uid://ejyx2dr8l1ds"]

[ext_resource type="Script" path="res://main/main.gd" id="1_x4u6l"]
[ext_resource type="PackedScene" uid="uid://b0xe80vpf72hj" path="res://main/hand/hand.tscn" id="3_uu51f"]
[ext_resource type="PackedScene" uid="uid://dfprtl6j3nq7t" path="res://main/board/board.tscn" id="4_6ye23"]
[ext_resource type="Script" path="res://main/move_manager.gd" id="4_d3hk0"]

[sub_resource type="Theme" id="Theme_6a1vi"]
default_font_size = 8

[node name="main" type="Node"]
script = ExtResource("1_x4u6l")

[node name="board" parent="." instance=ExtResource("4_6ye23")]
unique_name_in_owner = true
position = Vector2(320, 192)

[node name="hand" parent="." instance=ExtResource("3_uu51f")]
unique_name_in_owner = true
position = Vector2(53, 185)

[node name="move manager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_d3hk0")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 289.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="game_info" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_6a1vi")
text = "Welcome to Oware!"

[node name="score_label" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "p1: 0 - p2: 0"

[node name="harvest_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.603922, 0.792157, 0.901961, 1)

[connection signal="capture_finished" from="." to="." method="_on_capture_finished"]
[connection signal="finished_sowing" from="." to="." method="_on_finished_sowing"]
[connection signal="start_capture" from="." to="." method="_on_start_capture"]
[connection signal="start_sowing" from="." to="." method="_on_start_sowing"]
[connection signal="turn_start" from="." to="." method="_on_turn_start"]

[editable path="board"]
[editable path="board/board_half"]
[editable path="board/board_half2"]
